# pipeline-test-20260322-priorities

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
